# Chess-Visualisation

./: CMakeLists.txt  Main.qml  Wizualizacja Szachów.md  chess_piece.cpp  chess_piece.h  chesscontroler.cpp  chesscontroler.h  dataparser.cpp  dataparser.h  fileloader.cpp  fileloader.h  main.cpp  promotion.pgn  test2.pgn
models/: Black_Bishop.qml  Black_King.qml  Black_Knight.qml  Black_Pawn.qml  Black_Queen.qml  Black_Rook.qml  Chess_base.qml  Chess_board.qml  White_Bishop.qml  White_King.qml  White_Knight.qml  White_Pawn.qml  White_Queen.qml  White_Rook.qml
models/fbx/: Black_Bishop.fbx  Black_King.fbx  Black_Knight.fbx  Black_Pawn.fbx  Black_Queen.fbx  Black_Rook.fbx  Plane.fbx  White_Bishop.fbx  White_King.fbx  White_Knight.fbx  White_Pawn.fbx  White_Queen.fbx  White_Rook.fbx  chess_base.fbx  chess_board.fbx
models/meshes/: black_Bishop_mesh.mesh  black_King_mesh.mesh  black_Knight_mesh.mesh  black_Pawn_mesh.mesh  black_Queen_mesh.mesh  black_Rook_mesh.mesh  chess_board_mesh.mesh  white_Bishop_mesh.mesh  white_King_mesh.mesh  white_Knight_mesh.mesh  white_Pawn_mesh.mesh  white_Queen_mesh.mesh  white_Rook_mesh.mesh
